--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "mini-spotify",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Mini Spotify app with Cloudinary and Render deployment",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Keerthana",
   "license": "ISC",
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
-    "cloudinary": "^2.8.0",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "multer": "^2.0.2"
+    "cloudinary": "^2.22.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
