--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "node": "18.x"
   },
   "dependencies": {
-    "cloudinary": "^2.22.0",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1"
-  }
+  },
+
+"engines": {
+  "node": "20.x"
 }
+}
+
