--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
 {
   "name": "mini-spotify",
   "version": "1.0.0",
-  "description": "Mini Spotify app with Cloudinary and Render deployment",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "author": "Keerthana",
-  "license": "ISC",
-  "engines": {
-    "node": "18.x"
-  },
   "dependencies": {
-    "cloudinary": "^1.41.3",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
+    "cloudinary": "^1.41.3"
   },
-
-"engines": {
-  "node": "20.x"
+  "engines": {
+    "node": "20.x"
+  }
 }
-}
-
