--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "cloudinary": "^1.41.3"
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "multer": "^1.4.5-lts.1"
   },
   "engines": {
     "node": "20.x"
