Mini Spotify full project with dynamic categories and Now Playing bar

--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
-CLOUD_NAME=dhwihael6
-API_KEY=792551141346141
-API_SECRET=erog7MYnXv4nsmoG_eIRw1D_9X0
+CLOUDINARY_URL=cloudinary://792551141346141:erog7MYnXv4nsmoG_eIRw1D_9X0@dhwihael6
 PORT=5000
-
